--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 </head>
 <body>
 
-  <h1>Welke website heeft u gevonden? (naam, url, link)</h1>
+  <h1>Markdown-warm-up</h1>
+
+  <h2>Welke website heeft u gevonden? (naam, url, link)</h2>
   <a href="http://www.007museum.com">007museum</a>
 
-  <h1>Wordt het regelmatig bijgewerkt?</h1>
+  <h2>Wordt het regelmatig bijgewerkt?</h2>
   <p>Laatste datum van bijwerking is 26 oktober 2018.</p>
 
-  <h1>Hoe heb je het gevonden?</h1>
+  <h2>Hoe heb je het gevonden?</h2>
   <p>Via Google met de zoekterm: bad website. En ook de website
   <a href="https://edit.co.uk/blog/top-10-worst-websites/">10 worst websites</a> overlopen.</p>
 
-  <h1>Waarom heeft deze website updates of een remake nodig?</h1>
+  <h2>Waarom heeft deze website updates of een remake nodig?</h2>
   <p>Een remake is aan te raden omwille van:</p>
   <ul>
     <li>te breed</li>
@@ -27,10 +29,10 @@
     <li>niet goed uitgelijnd</li>
   </ul>
 
-  <h1>Is deze website aanwezig op sociale netwerken?</h1>
+  <h2>Is deze website aanwezig op sociale netwerken?</h2>
   <p>Er bestaat wel een actieve facebook account maar de naam van de account komt niet overeen met de naam van de website.</p>
 
-  <h1>Maak een lijst met aanbevelingen van toekomstige wijzigingen.</h1>
+  <h2>Maak een lijst met aanbevelingen van toekomstige wijzigingen.</h>
   <ul>
     <li>duidelijker overzicht maken</li>
     <li>dynamische website grootte en breedte</li>
