--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <h2>Is deze website aanwezig op sociale netwerken?</h2>
   <p>Er bestaat wel een actieve facebook account maar de naam van de account komt niet overeen met de naam van de website.</p>
 
-  <h2>Maak een lijst met aanbevelingen van toekomstige wijzigingen.</h>
+  <h2>Maak een lijst met aanbevelingen van toekomstige wijzigingen.</h2>
   <ul>
     <li>duidelijker overzicht maken</li>
     <li>dynamische website grootte en breedte</li>
