--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Markdown-warm-up</title>
+    <title>Markdown-warm-up</title>
   <meta charset="utf-8">
+  <style type="text/css">
+  body {
+    color:purple;
+    background-color: rgb(155, 255, 179) }
+  </style>
 </head>
 <body>
 
-  <h1>Markdown-warm-up</h1>
+  <h1 style="background-color:rgb(250, 99, 71);">Markdown-warm-up</h1>
 
-  <h2>Welke website heeft u gevonden? (naam, url, link)</h2>
+  <h2 style="background-color:rgb(255, 170, 71);">Welke website heeft u gevonden? (naam, url, link)</h2>
   <a href="http://www.007museum.com">007museum</a>
 
-  <h2>Wordt het regelmatig bijgewerkt?</h2>
+  <h2 style="background-color:rgb(255, 170, 71);">Wordt het regelmatig bijgewerkt?</h2>
   <p>Laatste datum van bijwerking is 26 oktober 2018.</p>
 
-  <h2>Hoe heb je het gevonden?</h2>
+  <h2 style="background-color:rgb(255, 170, 71);">Hoe heb je het gevonden?</h2>
   <p>Via Google met de zoekterm: bad website. En ook de website
   <a href="https://edit.co.uk/blog/top-10-worst-websites/">10 worst websites</a> overlopen.</p>
 
-  <h2>Waarom heeft deze website updates of een remake nodig?</h2>
+  <h2 style="background-color:rgb(255, 170, 71);">Waarom heeft deze website updates of een remake nodig?</h2>
   <p>Een remake is aan te raden omwille van:</p>
   <ul>
     <li>te breed</li>
@@ -29,10 +34,10 @@
     <li>niet goed uitgelijnd</li>
   </ul>
 
-  <h2>Is deze website aanwezig op sociale netwerken?</h2>
+  <h2 style="background-color:rgb(255, 170, 71);">Is deze website aanwezig op sociale netwerken?</h2>
   <p>Er bestaat wel een actieve facebook account maar de naam van de account komt niet overeen met de naam van de website.</p>
 
-  <h2>Maak een lijst met aanbevelingen van toekomstige wijzigingen.</h2>
+  <h2 style="background-color:rgb(255, 170, 71);">Maak een lijst met aanbevelingen van toekomstige wijzigingen.</h2>
   <ul>
     <li>duidelijker overzicht maken</li>
     <li>dynamische website grootte en breedte</li>
